created filters for series
