# backend/api-spec/src/main/resources/openapi/streaming.yaml
@@ -460,6 +460,67 @@ paths:
         '404':
           description: Episode not found
 
+  /series/filter:
+    get:
+      summary: Series filtering
+      parameters:
+        - name: genres
+          in: query
+          description: List of genres
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Genre'
+
+        - name: countries
+          in: query
+          description: List of countries
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: array
+            items:
+              type: string
+
+        - name: releaseYears
+          in: query
+          description: List of release years
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: array
+            items:
+              type: integer
+
+        - name: ratingFrom
+          in: query
+          required: false
+          schema:
+            type: number
+            format: float
+
+        - name: ratingTo
+          in: query
+          required: false
+          schema:
+            type: number
+            format: float
+
+      responses:
+        '200':
+          description: List of filtered series
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Series'
+
 components:
   schemas:
     CreateUser:
